[gd_scene load_steps=37 format=3 uid="uid://c63b0ewnfkf4n"]

[ext_resource type="Script" uid="uid://t733jevi3esu" path="res://assets/scenes/ui/mapOverview/map/map.gd" id="1_rkk0n"]
[ext_resource type="Texture2D" uid="uid://d0f0crtwpmoka" path="res://assets/textures/panoramas/panoramatest1.png" id="2_1xklm"]
[ext_resource type="PackedScene" uid="uid://cqmrcejc0uwpb" path="res://assets/models/misc/mapoverview.glb" id="3_fvi35"]
[ext_resource type="PackedScene" uid="uid://b0c42ujfj0pdo" path="res://assets/scenes/ui/mapOverview/mapSelectionMarker.tscn" id="3_htbkg"]
[ext_resource type="LightmapGIData" uid="uid://dd1r62syvv628" path="res://assets/scenes/ui/mapOverview/map/map.lmbake" id="4_e1lil"]
[ext_resource type="PackedScene" uid="uid://vwacetrutvng" path="res://assets/scenes/ui/mapOverview/map/MapLocation.tscn" id="4_fvi35"]
[ext_resource type="PackedScene" uid="uid://ccnq3cc8k6nt5" path="res://assets/scenes/worlds/debug/yetAnotherTestWorld/anotherTest.tscn" id="5_tej77"]
[ext_resource type="PackedScene" uid="uid://c8bkdy6aqwxls" path="res://assets/scenes/worlds/areas/playerHome/playerHome.tscn" id="6_tej77"]
[ext_resource type="PackedScene" uid="uid://gunf36bni4oe" path="res://assets/scenes/worlds/areas/Shop/shopArea.tscn" id="7_46huw"]
[ext_resource type="PackedScene" uid="uid://7idw8rtae15o" path="res://assets/scenes/worlds/missions/Crackhouse/crackhouse-p1.tscn" id="7_dvqh0"]
[ext_resource type="PackedScene" uid="uid://c8sr5dinhonjs" path="res://assets/scenes/worlds/missions/AbandonedHospital/HospitalMission.tscn" id="8_d0eii"]
[ext_resource type="PackedScene" uid="uid://ddgk7ndlf2mqo" path="res://assets/scenes/worlds/missions/survivalStreet/survivalStreet.tscn" id="10_mlvph"]

[sub_resource type="Gradient" id="Gradient_6voip"]
colors = PackedColorArray(0, 0, 0, 1, 0.996078, 0.941176, 0.811765, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_iun5n"]
gradient = SubResource("Gradient_6voip")

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_tipwx"]
panorama = ExtResource("2_1xklm")

[sub_resource type="Sky" id="Sky_nj1fe"]
sky_material = SubResource("PanoramaSkyMaterial_tipwx")

[sub_resource type="Environment" id="Environment_e1lil"]
background_mode = 1
background_color = Color(0.5019608, 0.09803922, 0, 1)
sky = SubResource("Sky_nj1fe")
ambient_light_source = 1
reflected_light_source = 1
tonemap_mode = 4
ssil_intensity = 0.75
sdfgi_use_occlusion = true
sdfgi_cascades = 8
glow_normalized = true
glow_bloom = 0.15
glow_blend_mode = 1
fog_light_energy = 0.0
fog_sun_scatter = 0.17
fog_density = 0.009
fog_sky_affect = 0.765
fog_height = 96.8
fog_height_density = 0.089
volumetric_fog_density = 0.2457
volumetric_fog_albedo = Color(0.848227, 0.767118, 0.651965, 1)
adjustment_brightness = 0.9
adjustment_saturation = 1.15
adjustment_color_correction = SubResource("GradientTexture1D_iun5n")

[sub_resource type="SphereShape3D" id="SphereShape3D_htbkg"]
radius = 0.065

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_htbkg"]
transparency = 2
alpha_scissor_threshold = 0.5
alpha_antialiasing_mode = 0

[sub_resource type="BoxShape3D" id="BoxShape3D_htbkg"]
size = Vector3(3.7597656, 0.4901123, 5.830078)

[sub_resource type="Gradient" id="Gradient_c10ua"]
offsets = PackedFloat32Array(0.25968993, 1)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_eds7j"]
gradient = SubResource("Gradient_c10ua")

[sub_resource type="Curve" id="Curve_6py30"]
_data = [Vector2(0, 0), 0.0, 2.8112292, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_uhde6"]
curve = SubResource("Curve_6py30")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_htbkg"]
resource_local_to_scene = true
gravity = Vector3(0, 0, 0)
scale_min = 1.1999999
scale_max = 1.1999999
scale_curve = SubResource("CurveTexture_uhde6")
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_eds7j")

[sub_resource type="BoxShape3D" id="BoxShape3D_l5ph3"]
size = Vector3(11.477417, 13.358917, 4.3310547)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l5ph3"]
resource_local_to_scene = true
gravity = Vector3(0, 0, 0)
scale_min = 1.1999999
scale_max = 1.1999999
scale_curve = SubResource("CurveTexture_uhde6")
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_eds7j")

[sub_resource type="BoxShape3D" id="BoxShape3D_4t545"]
size = Vector3(5.474121, 12.661255, 7.525879)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4t545"]
resource_local_to_scene = true
gravity = Vector3(0, 0, 0)
scale_min = 1.1999999
scale_max = 1.1999999
scale_curve = SubResource("CurveTexture_uhde6")
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_eds7j")

[sub_resource type="BoxShape3D" id="BoxShape3D_ab8qf"]
size = Vector3(7.819458, 6.5369873, 5.663452)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ab8qf"]
resource_local_to_scene = true
gravity = Vector3(0, 0, 0)
scale_min = 1.1999999
scale_max = 1.1999999
scale_curve = SubResource("CurveTexture_uhde6")
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_eds7j")

[sub_resource type="BoxShape3D" id="BoxShape3D_uyve1"]
size = Vector3(8.700745, 6.6835938, 12.893433)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_uyve1"]
resource_local_to_scene = true
gravity = Vector3(0, 0, 0)
scale_min = 1.1999999
scale_max = 1.1999999
scale_curve = SubResource("CurveTexture_uhde6")
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_eds7j")

[sub_resource type="BoxShape3D" id="BoxShape3D_m7rdm"]
size = Vector3(7.597534, 14.486816, 7.7128143)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_m7rdm"]
resource_local_to_scene = true
gravity = Vector3(0, 0, 0)
scale_min = 1.1999999
scale_max = 1.1999999
scale_curve = SubResource("CurveTexture_uhde6")
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_eds7j")

[sub_resource type="BoxShape3D" id="BoxShape3D_82d5o"]
size = Vector3(3.6797485, 7.1469727, 4.617676)

[node name="map" type="Node3D"]
script = ExtResource("1_rkk0n")
mapRotations = Array[Vector3]([Vector3(-30, 149, 0), Vector3(-35, -35.4, 0), Vector3(-36.9, -158, 0)])
mapPositions = Array[Vector3]([Vector3(5.21291, 37.0915, 4.57104), Vector3(-19.2002, 37.0915, -0.622449), Vector3(-18.7244, 32.5327, -74.3564)])

[node name="worldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_e1lil")

[node name="cameraController" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.080288, 16.512793, -19.51192)
motion_mode = 1

[node name="Camera" type="Node3D" parent="cameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5292459, 6.5257053, 4.9839897)

[node name="camHoriz" type="Node3D" parent="cameraController/Camera"]
unique_name_in_owner = true
transform = Transform3D(0.9999999, 0, 0, 0, 0.78214073, 0.6231018, 0, -0.62310183, 0.7821406, 0, 0, 0)

[node name="camVert" type="Node3D" parent="cameraController/Camera/camHoriz"]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1.0000001, 0, 0, 0, 1.0000001, 0, 0, 0)

[node name="springArm3d" type="SpringArm3D" parent="cameraController/Camera/camHoriz/camVert"]
transform = Transform3D(1, 0, 0, 0, 1, -2.9802322e-08, 0, 2.9802322e-08, 1, 0, 0, 0)
collision_mask = 0

[node name="camera3d" type="Camera3D" parent="cameraController/Camera/camHoriz/camVert/springArm3d"]
unique_name_in_owner = true
transform = Transform3D(1.0000001, 0, 0, 0, 0.9999999, -2.9802322e-08, 0, 0, 1, 0, 0, 0)

[node name="mapSelectionMarker" parent="cameraController/Camera/camHoriz" node_paths=PackedStringArray("map") instance=ExtResource("3_htbkg")]
unique_name_in_owner = true
transform = Transform3D(2.0000002, 0, 0, 0, 1.5642813, -1.2462037, 0, 1.2462038, 1.5642816, 0.18424582, -7.5853653, -17.107468)
map = NodePath("../../../..")

[node name="rayCast3d" type="RayCast3D" parent="cameraController/Camera/camHoriz"]
unique_name_in_owner = true
transform = Transform3D(1.0000001, 0, 0, 0, 0.7821407, -0.62310183, 0, 0.6231019, 0.7821408, 0.18424582, -7.5853653, -17.107468)
target_position = Vector3(0, -50, 0)

[node name="collisionShape3d" type="CollisionShape3D" parent="cameraController"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2.5292459, 6.5257053, 4.9839897)
shape = SubResource("SphereShape3D_htbkg")

[node name="model" type="Node3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="mapoverview" parent="model" instance=ExtResource("3_fvi35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -65.6323, 0, 99.9221)

[node name="Plane" parent="model/mapoverview" index="0"]
ignore_occlusion_culling = true
surface_material_override/0 = SubResource("StandardMaterial3D_htbkg")

[node name="StaticBody3D" type="StaticBody3D" parent="model/mapoverview/Plane" index="0"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="model/mapoverview/Plane/StaticBody3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.31640628, -0.25494385, 0.6284179)
shape = SubResource("BoxShape3D_htbkg")

[node name="lightmapGi" type="LightmapGI" parent="model"]
directional = true
denoiser_strength = 0.2
denoiser_range = 20
environment_mode = 3
environment_custom_energy = 0.45
generate_probes_subdiv = 3
light_data = ExtResource("4_e1lil")

[node name="areaNodes" type="Node" parent="."]
unique_name_in_owner = true

[node name="mapLocation" parent="areaNodes" instance=ExtResource("4_fvi35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5013993, 6.0131, -60.071514)
locationName = "Test Place!"
travelScene = ExtResource("5_tej77")
travelGroupID = 2

[node name="pingParticle" parent="areaNodes/mapLocation" index="2"]
transform = Transform3D(11.477417, 0, 0, 0, 1, 0, 0, 0, 4.3310547, 0, 0, 0)
process_material = SubResource("ParticleProcessMaterial_htbkg")

[node name="collisionShape3d" parent="areaNodes/mapLocation/area3d" index="0"]
shape = SubResource("BoxShape3D_l5ph3")

[node name="positionReference" parent="areaNodes/mapLocation" index="4"]
transform = Transform3D(11.477417, 0, 0, 0, 13.358917, 0, 0, 0, 4.3310547, 0, 0, 0)

[node name="cornerUpLeft" parent="areaNodes/mapLocation/visualHolder" index="0"]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 5.7387085, 0, -2.1655273)

[node name="cornerUpRight" parent="areaNodes/mapLocation/visualHolder" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 5.7387085, 0, 2.1655273)

[node name="cornerBottomRight" parent="areaNodes/mapLocation/visualHolder" index="2"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -5.7387085, 0, 2.1655273)

[node name="cornerBottomLeft" parent="areaNodes/mapLocation/visualHolder" index="3"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -5.7387085, 0, -2.1655273)

[node name="mapLocation2" parent="areaNodes" instance=ExtResource("4_fvi35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -30.311678, 6.0131, 51.298866)
locationName = "Home"
travelScene = ExtResource("6_tej77")

[node name="pingParticle" parent="areaNodes/mapLocation2" index="2"]
transform = Transform3D(5.474121, 0, 0, 0, 1, 0, 0, 0, 7.525879, 0, 0, 0)
process_material = SubResource("ParticleProcessMaterial_l5ph3")

[node name="collisionShape3d" parent="areaNodes/mapLocation2/area3d" index="0"]
shape = SubResource("BoxShape3D_4t545")

[node name="positionReference" parent="areaNodes/mapLocation2" index="4"]
transform = Transform3D(5.474121, 0, 0, 0, 12.661255, 0, 0, 0, 7.525879, 0, 0, 0)

[node name="cornerUpLeft" parent="areaNodes/mapLocation2/visualHolder" index="0"]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 2.7370605, 0, -3.7629395)

[node name="cornerUpRight" parent="areaNodes/mapLocation2/visualHolder" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 2.7370605, 0, 3.7629395)

[node name="cornerBottomRight" parent="areaNodes/mapLocation2/visualHolder" index="2"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -2.7370586, 0, 3.7629395)

[node name="cornerBottomLeft" parent="areaNodes/mapLocation2/visualHolder" index="3"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -2.7370586, 0, -3.7629395)

[node name="mapLocation5" parent="areaNodes" instance=ExtResource("4_fvi35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -56.637424, 5.9831886, 24.882553)
locationName = "Lanton Warehouse"
travelScene = ExtResource("7_dvqh0")

[node name="pingParticle" parent="areaNodes/mapLocation5" index="2"]
transform = Transform3D(7.819458, 0, 0, 0, 1, 0, 0, 0, 5.663452, 0, 0, 0)
process_material = SubResource("ParticleProcessMaterial_4t545")

[node name="collisionShape3d" parent="areaNodes/mapLocation5/area3d" index="0"]
shape = SubResource("BoxShape3D_ab8qf")

[node name="positionReference" parent="areaNodes/mapLocation5" index="4"]
transform = Transform3D(7.819458, 0, 0, 0, 6.5369873, 0, 0, 0, 5.663452, 0, 0, 0)

[node name="cornerUpLeft" parent="areaNodes/mapLocation5/visualHolder" index="0"]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 3.909729, 0, -2.831726)

[node name="cornerUpRight" parent="areaNodes/mapLocation5/visualHolder" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.909729, 0, 2.831726)

[node name="cornerBottomRight" parent="areaNodes/mapLocation5/visualHolder" index="2"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -3.909729, 0, 2.831726)

[node name="cornerBottomLeft" parent="areaNodes/mapLocation5/visualHolder" index="3"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -3.909729, 0, -2.831726)

[node name="mapLocation3" parent="areaNodes" instance=ExtResource("4_fvi35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -26.280127, 6.0173182, 28.689754)
locationName = "Uncle Tsimk's Shop"
travelScene = ExtResource("7_46huw")

[node name="pingParticle" parent="areaNodes/mapLocation3" index="2"]
transform = Transform3D(8.700745, 0, 0, 0, 1, 0, 0, 0, 12.893433, 0, 0, 0)
process_material = SubResource("ParticleProcessMaterial_ab8qf")

[node name="collisionShape3d" parent="areaNodes/mapLocation3/area3d" index="0"]
shape = SubResource("BoxShape3D_uyve1")

[node name="positionReference" parent="areaNodes/mapLocation3" index="4"]
transform = Transform3D(8.700745, 0, 0, 0, 6.6835938, 0, 0, 0, 12.893433, 0, 0, 0)

[node name="cornerUpLeft" parent="areaNodes/mapLocation3/visualHolder" index="0"]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 4.3503723, 0, -6.4467163)

[node name="cornerUpRight" parent="areaNodes/mapLocation3/visualHolder" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 4.3503723, 0, 6.4467163)

[node name="cornerBottomRight" parent="areaNodes/mapLocation3/visualHolder" index="2"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -4.3503723, 0, 6.4467163)

[node name="cornerBottomLeft" parent="areaNodes/mapLocation3/visualHolder" index="3"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -4.3503723, 0, -6.4467163)

[node name="mapLocation4" parent="areaNodes" instance=ExtResource("4_fvi35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -13.828157, 5.977043, -23.81974)
locationName = "Havelona Hospital"
travelScene = ExtResource("8_d0eii")
travelGroupID = 1

[node name="pingParticle" parent="areaNodes/mapLocation4" index="2"]
transform = Transform3D(7.597534, 0, 0, 0, 1, 0, 0, 0, 7.7128143, 0, 0, 0)
process_material = SubResource("ParticleProcessMaterial_uyve1")

[node name="collisionShape3d" parent="areaNodes/mapLocation4/area3d" index="0"]
shape = SubResource("BoxShape3D_m7rdm")

[node name="positionReference" parent="areaNodes/mapLocation4" index="4"]
transform = Transform3D(7.597534, 0, 0, 0, 14.486816, 0, 0, 0, 7.7128143, 0, 0, 0)

[node name="cornerUpLeft" parent="areaNodes/mapLocation4/visualHolder" index="0"]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 3.798767, 0, -3.8564072)

[node name="cornerUpRight" parent="areaNodes/mapLocation4/visualHolder" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 3.798767, 0, 3.8564072)

[node name="cornerBottomRight" parent="areaNodes/mapLocation4/visualHolder" index="2"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -3.798767, 0, 3.8564072)

[node name="cornerBottomLeft" parent="areaNodes/mapLocation4/visualHolder" index="3"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -3.798767, 0, -3.8564072)

[node name="mapLocation6" parent="areaNodes" instance=ExtResource("4_fvi35")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 8.251675, 5.9782143, -25.340658)
locationName = "Survival Street"
travelScene = ExtResource("10_mlvph")
travelGroupID = 1

[node name="pingParticle" parent="areaNodes/mapLocation6" index="2"]
transform = Transform3D(3.6797485, 0, 0, 0, 1, 0, 0, 0, 4.617676, 0, 0, 0)
process_material = SubResource("ParticleProcessMaterial_m7rdm")

[node name="collisionShape3d" parent="areaNodes/mapLocation6/area3d" index="0"]
shape = SubResource("BoxShape3D_82d5o")

[node name="positionReference" parent="areaNodes/mapLocation6" index="4"]
transform = Transform3D(3.6797485, 0, 0, 0, 7.1469727, 0, 0, 0, 4.617676, 0, 0, 0)

[node name="cornerUpLeft" parent="areaNodes/mapLocation6/visualHolder" index="0"]
transform = Transform3D(1.3113416e-07, 0, 1, 0, 1, 0, -1, 0, 1.3113416e-07, 1.8398743, 0, -2.308838)

[node name="cornerUpRight" parent="areaNodes/mapLocation6/visualHolder" index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.8398743, 0, 2.308838)

[node name="cornerBottomRight" parent="areaNodes/mapLocation6/visualHolder" index="2"]
transform = Transform3D(-4.371139e-08, 0, -1, 0, 1, 0, 1, 0, -4.371139e-08, -1.8398743, 0, 2.308838)

[node name="cornerBottomLeft" parent="areaNodes/mapLocation6/visualHolder" index="3"]
transform = Transform3D(-1, 0, 8.742278e-08, 0, 1, 0, -8.742278e-08, 0, -1, -1.8398743, 0, -2.308838)

[node name="directionalLight3d" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.92211926, -0.058615506, 0.38243997, 0.23590562, 0.69828504, 0.6758305, -0.3066661, 0.7134167, -0.63007337, 0, 33.6165, 0)
directional_shadow_mode = 0

[editable path="model/mapoverview"]
[editable path="areaNodes/mapLocation"]
[editable path="areaNodes/mapLocation2"]
[editable path="areaNodes/mapLocation5"]
[editable path="areaNodes/mapLocation3"]
[editable path="areaNodes/mapLocation4"]
[editable path="areaNodes/mapLocation6"]
